name:                   splines-test
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Tests
synopsis:               Tests for the splines package
description:            Tests for the splines package

Executable splines-test
  hs-source-dirs:       src
  main-is:              Tests.hs
  build-depends:        base >= 3 && <5,
                        containers,
                        polynomial,
                        splines,
                        test-framework,
                        test-framework-quickcheck2,
                        QuickCheck >= 2,
                        vector-space
